--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>timecontrol_barcode</title>
+    <title>產品標籤與條碼產生器</title>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.0/dist/JsBarcode.all.min.js"></script>
     <style>
         body {
@@ -173,7 +173,7 @@
             }
         }
 
-        /* 響應式設計 - 手機版樣式 */
+        /* 手機版 */
         @media (max-width: 600px) {
             body {
                 flex-direction: column;
@@ -228,7 +228,8 @@
         <label for="expiryDate">有效日期：</label>
         <input type="date" id="expiryDate" onchange="calculateExpiryDay(); updateLabel();" value="2025-09-16"> 
     </div>
-
+    
+    <button onclick="window.print()">列印標籤</button>
 </div>
 
 <div class="label-preview-container">
@@ -370,5 +371,4 @@
 </script>
 
 </body>
-
 </html>
