--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                if (currentHour >=19 && currentHour < 24) {
                     
                 } else {
-                     showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段`)
+                     showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段19-24`)
                 }
                 break;
             }
@@ -624,7 +624,7 @@
                 if (currentHour >=19 && currentHour < 3) {
                    
                 } else {
-                     showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段`)
+                     showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段19-03`)
                 }
                 break;
             }
@@ -634,7 +634,7 @@
                 if (currentHour >=8 && currentHour < 17) {
 
                 } else {
-                    showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段`)
+                    showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段10-17`)
                 }
                 break;
             }
