--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     batchCodeSelect.value = scannedBatchCode;
                     i_time_(code)
                 } else {
-                    showCustomAlert(`${code}掃描到的配別碼 ${scannedBatchCode} 不在選單中。`);
+                    showCustomAlert(`${code}掃描到的配別碼 ${scannedBatchCode} 不在選單中。</br>請重新掃瞄並確認為時控條碼。`);
                 }
 
                 stopScanner();
