--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                if (currentHour >=19 && currentHour < 24) {
                     
                 } else {
-                    showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段10-17 or 19-03 </br> 自動匹配最近時段19點後即有折扣`)
+                    showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段19-24 </br> 自動匹配最近時段19點後即有折扣`)
                 }
                 break;
             }
