--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         .warning-text {
             font-size: 0.8em;
             color: #888;
-            text-align: right;
+            text-align: left;
             margin-top: 5px;
         }
         
@@ -479,7 +479,7 @@
         <div class="label-barcode">
             <svg id="barcode"></svg>
             <div class="label-barcode-text" id="labelBarcodeText"></div>
-            <div class="warning-text">警告標語::測試用無法結帳:謝絕任何非法使用</div>
+            <div class="warning-text">警告：本條碼僅供測試使用，禁止用於結帳。若以此條碼進行結帳，可能導致門市營運損失及庫存異常，並涉及不當使用之責任。使用本條碼即代表同意並承擔上述責任。</div>
         </div>
     </div>
 </div>
