--- a/index.html
+++ b/index.html
@@ -195,32 +195,34 @@
             }
         }
         /* 條碼掃描器樣式 */
-        #scanner-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            display: none; /* 預設隱藏 */
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            z-index: 1000;
-        }
-        #interactive.viewport {
-            position: relative;
-            width: 80%;
-            height: 80%;
-        }
-        canvas.drawing, video.drawing {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .modal-overlay {
+#scanner-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none; /* 預設隱藏 */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1000;
+}
+#interactive.viewport {
+    position: relative;
+    /* 移除 margin-top，讓其自然靠上 */
+    width: 100%;
+    height: 60%;
+}
+canvas.drawing, video.drawing {
+    position: absolute;
+    top: 0;
+    bottom: 50px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.modal-overlay {
 	position: fixed; /* 固定在視口中 */
 	top: 0;
 	left: 0;
@@ -427,10 +429,6 @@
         <input type="number" id="price" oninput="updateLabel()" placeholder="請輸入價格 (元)" value="999">
     </div>
     <hr>
-    <div class="input-group">
-        <label for="itemNumber">貨號（8碼）：</label>
-        <input type="text" id="itemNumber" maxlength="8" oninput="updateLabel()" placeholder="請輸入8碼貨號" value="26005652">
-    </div>
     <div class="input-group" id="cameraSelectGroup" style="display:none;">
         <label for="cameraSelect">選擇鏡頭：</label>
         <select id="cameraSelect"></select>
@@ -438,6 +436,11 @@
     <div class="input-group">
         <button onclick="startScanner()">掃描條碼</button>
     </div>
+    <div class="input-group">
+        <label for="itemNumber">貨號（8碼）：</label>
+        <input type="text" id="itemNumber" maxlength="8" oninput="updateLabel()" placeholder="請輸入8碼貨號" value="26005652">
+    </div>
+
     <div class="input-group">
         <label for="batchCode">配別（1碼）：</label>
         <select id="batchCode" onchange="updateLabel()">
@@ -610,6 +613,7 @@
     const cameraSelect = document.getElementById('cameraSelect');
 
     function startScanner() {
+        document.body.style.overflow = 'hidden'; // 禁止頁面滑動
         const selectedCamera = cameraSelect.value;
         scannerContainer.style.display = 'flex';
 
@@ -663,6 +667,7 @@
 
     function stopScanner() {
         if (scannerRunning) {
+            document.body.style.overflow = 'auto'; // 禁止頁面滑動
             Quagga.stop();
             scannerContainer.style.display = 'none';
             scannerRunning = false;
