--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ canvas.drawing, video.drawing {
         <div class="modal-box">
             <div class="modal-header">
                 <div class="title-text">
-                    <img src="https://images.freeimages.com/vhq/images/previews/7c4/red-round-error-warning-icon-49079.png" alt="X Icon" class="close-icon"> <span>作業提示</span>
+                    <span class="popup-icon">❌</span> <span>提示</span>
                 </div>
             </div>
             <div class="modal-content" id="modalContent">
@@ -407,8 +407,8 @@ canvas.drawing, video.drawing {
 <div id="popupOverlay" class="overlay">
     <div class="popup">
         <div class="popup-header">
-            <span class="popup-icon">!</span>
-            作業提示
+            <span class="popup-icon">✅</span>
+            成功
         </div>
         <div class="popup-content" id="info_alert_content">
            
