--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ canvas.drawing, video.drawing {
     </div>
 </div>
 <div class="container">
-    <h1>標籤資料輸入</h1>
+    <h1>乞丐時光產生器</h1>
     <div class="input-group">
         <label for="productName">品名：</label>
         <input type="text" id="productName" oninput="updateLabel()" placeholder="請輸入品名" value="*!!測試用*">
@@ -832,3 +832,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
