--- a/index.html
+++ b/index.html
@@ -419,17 +419,17 @@ canvas.drawing, video.drawing {
     </div>
 </div>
 <div class="container">
-    <h2>乞丐時光條碼搜尋器</h2>
+    <h1>乞丐時光條碼搜尋器</h1>
     <div class="input-group">
-        <label for="productName">品名：</label>
+        <label for="productName">品名：(選)</label>
         <input type="text" id="productName" oninput="updateLabel()" placeholder="請輸入品名" value="*!!測試用*">
     </div>
     <div class="input-group">
-        <label for="calories">熱量：</label>
+        <label for="calories">熱量：(選)</label>
         <input type="number" id="calories" oninput="updateLabel()" placeholder="請輸入熱量 (大卡)" value="999">
     </div>
     <div class="input-group">
-        <label for="price">價格：</label>
+        <label for="price">價格：(選)</label>
         <input type="number" id="price" oninput="updateLabel()" placeholder="請輸入價格 (元)" value="999">
     </div>
     <hr>
@@ -441,12 +441,12 @@ canvas.drawing, video.drawing {
         <button onclick="startScanner()">掃描條碼</button>
     </div>
     <div class="input-group">
-        <label for="itemNumber">貨號（8碼）：</label>
+        <label for="itemNumber"><span style="color: red;">※</span>貨號（8碼）：</label>
         <input type="text" id="itemNumber" maxlength="8" oninput="updateLabel()" placeholder="請輸入8碼貨號" value="26005652">
     </div>
 
     <div class="input-group">
-        <label for="batchCode">配別（1碼）：</label>
+        <label for="batchCode"><span style="color: red;">※</span>配別（1碼）：</label>
         <select id="batchCode" onchange="updateLabel()">
             <option value="1">1 (24時)</option>
             <option value="3">3 (3時)</option>
@@ -454,11 +454,11 @@ canvas.drawing, video.drawing {
         </select>
     </div>
     <div class="input-group">
-        <label for="productionDate">製造日期：</label>
+        <label for="productionDate">製造日期：(選)</label>
         <input type="date" id="productionDate" onchange="updateLabel()" value="2025-09-15">
     </div>
     <div class="input-group">
-        <label for="expiryDate">有效日期：</label>
+        <label for="expiryDate"><span style="color: red;">※</span>有效日期：</label>
         <input type="date" id="expiryDate" onchange="calculateExpiryDay(); updateLabel();" value="2025-09-16"> 
     </div>
     
@@ -466,7 +466,7 @@ canvas.drawing, video.drawing {
 </div>
 
 <div class="label-preview-container" id="label_preview">
-    <h1>標籤預覽(測試用)</h1>
+    <h1>標籤搜尋結果</h1>
     <div class="product-label" id="productLabel">
         <div class="label-header" id="headerLine">
             <div class="product-name" id="labelProductName">**品名**</div>
@@ -832,5 +832,3 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
-
