--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     max-width: 600px;
     margin: auto;
     font-family: Arial, sans-serif;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .input-group {
@@ -952,3 +955,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
