--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     max-width: 600px;
     margin: auto;
     font-family: Arial, sans-serif;
+	padding: 20px;
 	border: 1px solid #ccc;
 	border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -955,4 +956,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
