--- a/index.html
+++ b/index.html
@@ -173,25 +173,32 @@
             width: 100%;
             height: 50px;
         }
-        .label-barcode-text {
-            font-size: 1.1em;
-            font-weight: bold;
-            letter-spacing: 10px;
-            text-align: center;
-            margin-top: 5px;
-            /* 強制文字不換行 */
-            white-space: nowrap;
-        }
-        /* 調整條碼前8碼的顏色 */
-        .barcode-red-text {
-            color: red;
-        }
-        .warning-text {
-            font-size: 0.8em;
-            color: #888;
-            text-align: left;
-            margin-top: 5px;
-        }
+    /*條碼下面文字*/
+.label-barcode-text {
+    letter-spacing: 10px; 
+    font-family: monospace; 
+    font-size: 20px;
+}
+.ean-left {
+    letter-spacing: 2px;  
+    margin-right: 10px;   
+}
+.ean-middle {
+    letter-spacing: 5px; 
+    margin-right: 10px;   
+}
+.ean-right {
+    letter-spacing: 5px;
+}
+.barcode-red-text {
+    color: red;
+}
+.warning-text {
+    font-size: 0.8em;
+    color: #888;
+    text-align: left;
+    margin-top: 5px;
+}
         
         /* 列印樣式 */
         @media print {
@@ -590,7 +597,8 @@
         </div>
         <div class="label-barcode">
             <svg id="barcode"></svg>
-            <div class="label-barcode-text" id="labelBarcodeText"></div>
+            <div class="label-barcode-text" id="labelBarcodeText">
+            </div>
             <div class="warning-text">
                 ⚠ 警告：
                 本條碼僅供測試使用，禁止用於結帳。
@@ -716,10 +724,22 @@
                 width: 5,
                 height: 60
             });
-           // 修正：將條碼數字分成兩部分並套用顏色
+           // 將條碼數字分成兩部分並套用顏色
             const firstEightDigits = fullBarcode.substring(0, 8);
             const lastFiveDigits = fullBarcode.substring(8);
-            document.getElementById('labelBarcodeText').innerHTML = `<span class="barcode-red-text">${firstEightDigits}</span>${lastFiveDigits}`;
+
+            const ean_left = fullBarcode.substring(0,1);
+            const ean_middle = fullBarcode.substring(1,7);
+            const ean_right= fullBarcode.substring(7);
+            var ean_text = 
+            `
+            <div class="label-barcode-text">
+                <span class="ean-left barcode-red-text" >${ean_left}</span>
+                <span class="ean-middle barcode-red-text">${ean_middle}${ean_right.substring(0,1)}</span>
+                <span class="ean-right">${ean_right}</span>
+            </div>
+            `
+            document.getElementById('labelBarcodeText').innerHTML = `${ean_text}`;
         } catch (error) {
             document.getElementById('labelBarcodeText').textContent = '條碼產生錯誤';
         }
