--- a/index.html
+++ b/index.html
@@ -898,8 +898,8 @@ function i_time_(scanner_code) {
             break;
         }
     }
-}
-        updateLabel();
+        updateLabel()；
+｝
         const targetDiv = document.getElementById('label_preview');
         if (targetDiv) {
             targetDiv.scrollIntoView({
