--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
 
                 
 
-    if (！scanner_code.startsWith("2")) {
+    if (!scanner_code.startsWith("2")) {
             showCustomAlert(`${code}無法辨識</br>請重新掃瞄並確認為時控條碼。`);
             itemNumberInput.value = 00000000;
             return false；
