--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
     if (!scanner_code.startsWith("2")) {
             showCustomAlert(`${code}無法辨識</br>請重新掃瞄並確認為時控條碼。`);
             itemNumberInput.value = 00000000;
-            return false；
+            return false;
     }else if(!optionExists){
             showCustomAlert(`${code}無法辨識配別</br>請自行選擇配別`);
     }
