--- a/index.html
+++ b/index.html
@@ -806,7 +806,8 @@
               }
 
             if (sameCount >= 3 && code && code.length === 13) {
-                i_time_(code)
+                i_time_(code);
+                alert("00001");
                 stopScanner();
                 updateLabel();
             }
