--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         </div>
     </div>
     <div class="button-group">
-        <button onclick="stopScanner()">取消掃描</button>
+        <button id="cancelscannerbtn" onclick="stopScanner()">取消掃描</button>
     </div>
 </div>
 <script>
@@ -797,7 +797,6 @@
         let lastResult = null;
         let sameCount = 0;
         Quagga.onDetected(function(result) {
-            alert("777")
             const code = result.codeResult.code;
             if(code === lastResult) {
                 sameCount++;
