--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
     </div>
 </div>
 <div class="container">
-  <h1>乞丐時光條碼搜尋器</h1>
+  <h1>乞丐時光條碼搜尋器@2.1.5</h1>
 
   <div class="input-group">
     <label for="productName">品名：</label>
