--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@ function updateClock() {
     
 
     const now = new Date();
-    now.setHours(now.getHours() + 15);
+    //now.setHours(now.getHours() + 15);
     const hh = now.getHours();
     const mm = now.getMinutes();
     const ss = now.getSeconds();
