--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@ function i_time_(scanner_code){
             if (currentHour >=19 && currentHour < 24) {
                 show_info_alert(`現在是${currentHour}點</br>自動匹配最近時段配別</br>${todayString} 24前有乞丐時光`)
             } else {
-                showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段19-24 </br> 自動匹配最近時段19點後即有折扣`)
+                showCustomAlert(`現在是${currentHour}點</br>非乞丐時光時段19-24 </br> 自動匹配最近時段</br>今日19點後即有折扣`)
             }
             break;
         }
