--- a/index.html
+++ b/index.html
@@ -556,6 +556,12 @@
 <div class="container">
   <h1>乞丐時光條碼搜尋器@2.1.5</h1>
 
+<a href="photo.html" target="_blank" rel="noopener noreferrer" style="text-decoration:none;">
+    <div style="display:inline-block; padding:12px 16px; background:#f5f5f5; border-radius:6px; cursor:pointer;">
+        排面照片產生器
+    </div>
+</a>
+
   <div class="input-group">
     <label for="productName">品名：</label>
     <input type="text" id="productName" oninput="updateLabel()" placeholder="請輸入品名" value="*!!測試用*">
