--- a/photo.html
+++ b/photo.html
@@ -153,7 +153,7 @@
 <body>
 
     <div class="container">
-        <h1>彈性照片編輯器</h1>
+        <h1>排面照片編輯器</h1>
 
         <div class="controls">
             <label for="uploaderName">拍攝者姓名:</label>
