--- a/photo.html
+++ b/photo.html
@@ -168,7 +168,7 @@
             </div>
 
         <div class="action-buttons">
-            <button id="addPhotoBtn">新增照片</button>
+            <button id="addPhotoBtn">新增照片(上限8張)</button>
             <button id="combineBtn">合併並生成照片</button>
         </div>
 
@@ -177,8 +177,14 @@
             <canvas id="photoCanvas" width="2000" height="1200"></canvas>
             <img id="finalImage" alt="最終照片">
         </div>
-    </div>
+<footer>
+    <p>
+    Copyright © 2025 Edward. All rights reserved.<br>
+    免責聲明：本應用程式為圖片處理工具，僅供個人使用，不提供檔案儲存或備份服務。使用者上傳之內容，應確保其合法性，本程式對任何因使用本應用程式而產生之內容不負任何責任。
+    </p>
+</footer>
 
+    </div>
     <script>
         const classNameInput = document.getElementById('className');
         const photoInputsContainer = document.getElementById('photoInputsContainer');
