--- a/photo.html
+++ b/photo.html
@@ -148,6 +148,10 @@
                 gap: 10px;
             }
         }
+
+footer{
+    color: #c4c1c1;
+}
     </style>
 </head>
 <body>
@@ -174,7 +178,7 @@
         </div>
 
         <div class="output-section" id="output-section">
-            <h2>最終照片預覽(長按or右鍵儲存相片)</h2>
+            <h2>照片預覽(長按or右鍵儲存相片)</h2>
             <canvas id="photoCanvas" width="2000" height="1200"></canvas>
             <img id="finalImage" alt="最終照片">
         </div>
